# nucleo-experiments

NUCLEO-F401RE/gpio-blinky/: Cargo.toml  Embed.toml  STM32F401.svd  build.rs  cmsis-packs.url  rust-toolchain.toml  st-mcu-categories.url  vscode-setup.url
NUCLEO-F401RE/gpio-blinky/.cargo/: config.toml
NUCLEO-F401RE/gpio-blinky/src/: main.rs
