[package]
name = "gpio-blinky-f4xx"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32f4xx-hal = { version = "0.19", features = ["rt", "stm32f401"] }
defmt = "0.3"
defmt-rtt = "0.4"
rtt-target = "0.5"
debouncr = "0.2"

[profile.dev]
codegen-units = 1
debug = true
incremental = false
lto = false             # faster
debug-assertions = true

[profile.release]
opt-level = 'z'          # optimize for space and speed
codegen-units = 1        # better optimizations
debug = true             # symbols are nice and they don't increase the size on Flash
incremental = false      # better optimizations
lto = true               # better optimizations
debug-assertions = false
